Added timestamps option in Todo model. Changed method for update todo (from todo.save() to Todo.update(key,update)). Remove execess function deleteCompleted function

--- a/serverless/functions/Todos.yml
+++ b/serverless/functions/Todos.yml
@@ -255,7 +255,7 @@ deleteAllTodo:
 #    - sns: ${self:provider.environment.SNS}
 
 deleteCompletedTodos:
-  handler: api/todos/handler.deleteCompletedTodos
+  handler: api/todos/handler.deleteAllTodos
   events:
   - http:
       path: todos/delete/completed
